--- a/Project/ProjectVS2017.vcxproj.filters
+++ b/Project/ProjectVS2017.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="ToolControll\TextBox.cpp">
       <Filter>ソース ファイル\ToolControll</Filter>
     </ClCompile>
+    <ClCompile Include="AreaManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="TabManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameApp.h">
@@ -83,10 +89,24 @@
     <ClInclude Include="ToolControll\TextBox.h">
       <Filter>ヘッダー ファイル\ToolControll</Filter>
     </ClInclude>
+    <ClInclude Include="AreaManager.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="TabManager.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Version.rc">
       <Filter>リソース ファイル</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico">
+      <Filter>リソース ファイル</Filter>
+    </Image>
   </ItemGroup>
 </Project>
